<resources>
    <!--어플리케이션 이름-->
    <string name="app_name">여주시 수목관리시스템</string>

    <!--사진 개수 표시-->
    <string name="image_count">%1$s / 2</string>

    <!--회원정보 페이지-->
    <string name="user_name">%1$s 님의 회원 정보</string>

    <!--사업조회 페이지-->
    <string name="company_format">%1$s  진행 사업</string>
    <string name="project_format">%1$s  관리 내역</string>

    <!--회원정보 페이지-->
    <string name="user_name2">%1$s 님의 정보 입니다.</string>
    <string name="오차범위">오차범위</string>
    <string name="위성수">위성 수</string>
    <string name="일반">일반</string>
    <string name="위성">위성</string>
    <string name="로딩메시지">위성 감지 중입니다. 잠시만 기다려주세요.</string>
    <string name="취소">취 소</string>
    <string name="저장">저 장</string>
    <string name="위치고정">위치 고정</string>

</resources>